# Walsh-haar-fcgr-genomics

./: CHECKLIST.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_accession_benchmark_v8.py  run_submission.sh  submission_check.sh
configs/: default.json
examples/: colab_script.py  run_synthetic_demo.py
output/: demo_report.json  fasta_analysis.json  run_manifest.json  verification_report.json
src/walsh_haar_fcgr/: __init__.py  cli.py  descriptors.py  entropy.py  fcgr.py  io.py  manifest.py  polar.py  qc.py  robustness.py  smoothing.py  transforms.py
tests/: test_entropy.py  test_fcgr.py  test_polar.py  test_smoothing.py  test_stability.py  test_transforms.py
