[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walsh-haar-fcgr"
version = "1.0.0"
description = "Theory-aligned FCGR, Walsh-Hadamard, Haar, toric smoothing, and fixed polar features for genomic sequences"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "S. A. Episkoposian"}
]
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
walsh-haar-fcgr = "walsh_haar_fcgr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
